--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .ipynb_checkpoints
+Research Paapers
+BaseLine-EfficientNet-B0-224.ipynb
+finalized_model.sav
+Project.zip
+serpientes.ipynb
+—Pngtree—green cute cartoon snake_4173385.png
+wELLWELL.ipynb
